--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>What's Killing Us?</h1>
   <div id="controls">
-    <label for="causeSelect">Select Cause of Death:</label>
+    <label for="causeSelect">Select Condition:</label>
     <select id="causeSelect"></select>
     <br><br>
     <label for="yearSlider">Select Year: <span id="yearLabel">2019</span></label>
